--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
   <title>Frontend Mentor | Interactive comments section</title>
 </head>
 
-<body>
+<body id="body">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
